Fixed bug on new projects dialog Collapsed sidenav

--- a/ui/ui-app/src/main/resources/static/js/medikly/shared/listing/toolbar/toolbar-templates.component.css
+++ b/ui/ui-app/src/main/resources/static/js/medikly/shared/listing/toolbar/toolbar-templates.component.css
@@ -1,29 +1,19 @@
-@import "../../../../../assets/medikly_theme/styles/css/pricing.css";
+@import url(../../../../../assets/medikly_theme/styles/css/pricing.css);
 :host {
   margin-left: -5px;
   margin-right: -5px;
   margin-top: -5px;
-  display: block;
-}
+  display: block; }
 
-$mat-toolbar-height-desktop: 64px !default;
-$mat-toolbar-height-mobile-portrait: 56px !default;
-$mat-toolbar-height-mobile-landscape: 48px !default;
+/deep/ .mat-toolbar-row {
+  height: 60px; }
 
-/deep/{
-  .mat-toolbar-row{
-    height: 60px;
-  }
-}
-
-.toolbar-templates-style{
-  background-color: #424249;
-}
+.toolbar-templates-style {
+  background-color: #424249; }
 
 .mat-card-top {
-  margin-top: -($mat-toolbar-height-desktop);
-  height: 56px;
-}
+  margin-top: -64px;
+  height: 56px; }
 
 /*@media ($mat-xsmall) and (orientation: portrait) {
   .mat-card-top {
@@ -36,28 +26,23 @@ $mat-toolbar-height-mobile-landscape: 48px !default;
     margin-top: -($mat-toolbar-height-mobile-landscape);
   }
 }*/
-
 .border-separator {
-  //margin: 16px 10px 0px -12px;
   border-left: 1px solid #fff;
   height: 24px;
   opacity: 0.54;
-  margin-top: 16px;
-}
+  margin-top: 16px; }
 
 .template-more-action {
-  margin-left: 10px;
-  md-icon {
+  margin-left: 10px; }
+  .template-more-action md-icon {
     color: #fff;
     cursor: pointer;
     font-weight: 300;
     display: inline-block;
     vertical-align: middle;
     padding-top: 18px;
-    font-size: 20px;
-  }
+    font-size: 20px; }
 
-}
 .template-more {
   color: #fff;
   cursor: pointer;
@@ -66,43 +51,31 @@ $mat-toolbar-height-mobile-landscape: 48px !default;
   margin-top: 14px;
   min-width: 24px;
   opacity: 0.8;
-
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
-
   margin-right: 10px;
-
   text-align: center;
   white-space: nowrap;
   height: 27px;
   line-height: 27px;
-
   outline: 0px;
-  padding: 0 8px;
-}
+  padding: 0 8px; }
 
 .toolbar-templates-content-holder {
   margin: auto;
   width: 690px;
   color: #d8dfe6;
-  //overflow: auto;
-  min-height: 300px;
-}
+  min-height: 300px; }
 
-
-.templates-gallery{
-
+.templates-gallery {
   min-height: 245px;
-  padding-bottom: 14px;
-  //min-height: 300px;
-}
+  padding-bottom: 14px; }
 
 .templates-contracted-header {
   width: 690px;
   margin: -64px auto 0 auto;
   padding-right: 14px;
-  //padding-left: 5px;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -117,11 +90,8 @@ $mat-toolbar-height-mobile-landscape: 48px !default;
   -webkit-transition-property: opacity;
   -moz-transition-property: opacity;
   -o-transition-property: opacity;
-  transition-property: opacity;
-
-  .template-contracted-header-text {
-
-
+  transition-property: opacity; }
+  .templates-contracted-header .template-contracted-header-text {
     color: #fff;
     cursor: pointer;
     font-size: 13px;
@@ -136,55 +106,39 @@ $mat-toolbar-height-mobile-landscape: 48px !default;
     height: 27px;
     line-height: 27px;
     outline: 0px;
-    padding: 0 8px;
-  }
+    padding: 0 8px; }
+  .templates-contracted-header .template-contracted-header-actions {
+    display: flex; }
 
-  .template-contracted-header-actions {
-    display: flex;
-  }
-}
 .toolbar-templates-showcase {
-  //width: 144px;
   width: 118px;
   margin-right: 19px;
   display: inline-block;
   vertical-align: top;
   white-space: nowrap;
-  color: #d8dfe6;
-
-  .toolbar-template-preview {
+  color: #d8dfe6; }
+  .toolbar-templates-showcase .toolbar-template-preview {
     height: 150px;
     width: 118px;
-
-    //height: 183px;
-    //width: 144px;
     background: #ffffff;
     cursor: pointer;
     overflow: hidden;
     position: relative;
     margin-bottom: 10px;
     user-select: none;
-    color: #d8dfe6;
-
-    img {
+    color: #d8dfe6; }
+    .toolbar-templates-showcase .toolbar-template-preview img {
       display: block;
-      width: 100%;
-    }
-
-    &:after {
-      box-shadow: inset 0px 0px 0px 2px #4285f4;
-    }
-  }
-
-  .toolbar-templates-caption {
+      width: 100%; }
+    .toolbar-templates-showcase .toolbar-template-preview:after {
+      box-shadow: inset 0px 0px 0px 2px #4285f4; }
+  .toolbar-templates-showcase .toolbar-templates-caption {
     flex-direction: row;
-    min-height: 32px;
-
-    .toolbar-templates-metadata {
+    min-height: 32px; }
+    .toolbar-templates-showcase .toolbar-templates-caption .toolbar-templates-metadata {
       width: 100%;
-      min-width: 0;
-
-      .toolbar-templates-title, .toolbar-templates-style {
+      min-width: 0; }
+      .toolbar-templates-showcase .toolbar-templates-caption .toolbar-templates-metadata .toolbar-templates-title, .toolbar-templates-showcase .toolbar-templates-caption .toolbar-templates-metadata .toolbar-templates-style {
         color: #fff;
         font-size: 14px;
         height: 19px;
@@ -192,56 +146,35 @@ $mat-toolbar-height-mobile-landscape: 48px !default;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-        user-select: none;
-      }
+        user-select: none; }
+      .toolbar-templates-showcase .toolbar-templates-caption .toolbar-templates-metadata .toolbar-templates-title {
+        font-weight: 500; }
+      .toolbar-templates-showcase .toolbar-templates-caption .toolbar-templates-metadata .toolbar-templates-style {
+        font-weight: 300; }
 
-      .toolbar-templates-title {
-        font-weight: 500;
-      }
-
-
-      .toolbar-templates-style {
-        font-weight: 300;
-      }
-    }
-  }
-}
-
-// Media queries
 @media only screen and (min-width: 1400px) {
   .toolbar-templates-content-holder {
-    width: 1150px;
-  }
+    width: 1150px; }
 
   .templates-contracted-header {
-    width: 1150px;
-  }
+    width: 1150px; }
 
   .toolbar-templates-showcase {
-
-    width: 144px;
-    .toolbar-template-preview {
+    width: 144px; }
+    .toolbar-templates-showcase .toolbar-template-preview {
       height: 183px;
-      width: 144px;
-    }
-  }
-}
-
+      width: 144px; } }
 @media only screen and (min-width: 1100px) and (max-width: 1399px) {
   .toolbar-templates-content-holder {
-    width: 920px;
-  }
+    width: 920px; }
 
   .templates-contracted-header {
-    width: 920px;
-  }
+    width: 920px; }
 
   .toolbar-templates-showcase {
-
-    width: 133px;
-    .toolbar-template-preview {
+    width: 133px; }
+    .toolbar-templates-showcase .toolbar-template-preview {
       height: 169px;
-      width: 133px;
-    }
-  }
-}
+      width: 133px; } }
+
+/*# sourceMappingURL=toolbar-templates.component.css.map */
